--- a/spec/fixtures/vcr_cassettes/nonexistant_med_search.yml
+++ b/spec/fixtures/vcr_cassettes/nonexistant_med_search.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: http://localhost:9292/med_search?medication_name=spiro
+    uri: https://mset-api-service.herokuapp.com/med_search?medication_name=spiro
     body:
       encoding: US-ASCII
       string: ''
@@ -18,6 +18,8 @@ http_interactions:
       code: 200
       message: 'OK '
     headers:
+      Connection:
+      - keep-alive
       Content-Type:
       - text/html;charset=utf-8
       Content-Length:
@@ -31,9 +33,9 @@ http_interactions:
       Server:
       - WEBrick/1.4.2 (Ruby/2.5.3/2018-10-18)
       Date:
-      - Mon, 14 Sep 2020 22:32:14 GMT
-      Connection:
-      - Keep-Alive
+      - Tue, 15 Sep 2020 01:23:42 GMT
+      Via:
+      - 1.1 vegur
     body:
       encoding: UTF-8
       string: |-
@@ -43,5 +45,5 @@ http_interactions:
             "message": "No matches found!"
           }
         }
-  recorded_at: Mon, 14 Sep 2020 22:32:14 GMT
+  recorded_at: Tue, 15 Sep 2020 01:23:41 GMT
 recorded_with: VCR 6.0.0
